force-app/main/default/objects/Product_Release__c/fields/Actual_Release_Date_S_V__c.field-meta.xml
<CustomField>
    <fullName>Actual_Release_Date_S_V__c</fullName>
    <label>Actual Release Date (simple version)</label>
    <type>DateTime</type>
</CustomField>