force-app/main/default/objects/Product_Release__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the product release often including a primary theme</description>
    <inlineHelpText>Description of the product release often including a primary theme</inlineHelpText>
    <label>Description</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>