force-app/main/default/objects/Product_Release__c/fields/Estimated_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Release_Date__c</fullName>
    <description>The best guess date that this version of the product will be released</description>
    <inlineHelpText>The best guess date that this version of the product will be released</inlineHelpText>
    <label>Estimated Release Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>