force-app/main/default/objects/Product_Release__c/fields/Limited_Support_Date__c.field-meta.xml
<CustomField>
    <fullName>Limited_Support_Date__c</fullName>
    <label>Limited Support Date</label>
    <type>Date</type>
</CustomField>