force-app/main/default/objects/Product_Release__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>Product Releases</relationshipLabel>
    <relationshipName>Product_Releases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>