force-app/main/default/objects/Product_Release__c/fields/Retired_Date__c.field-meta.xml
<CustomField>
    <fullName>Retired_Date__c</fullName>
    <label>Retired Date</label>
    <type>Date</type>
</CustomField>